--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Jackb1379</title>
+	<meta name="author" content="Jackb1379">
+</head>
+<body>
+  <a href="https://github.com/Jackb1379">My Github</a><br>
+  <a href="https://github.com/Jackb1379/jackb1379.github.io">This page's source code on Github</a><br>
+</body>
+</html>  
