--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="UTF-8">
-	<title>Jackb1379</title>
-	<meta name="author" content="Jackb1379">
+	<meta name="viewport" content="width=device-width, user-scaleable=no">
+	<title>Server Helper changelog</title>
+	<link rel="stylesheet" href="main.style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-  <a href="https://github.com/Jackb1379">My Github</a><br>
-  <a href="https://github.com/Jackb1379/jackb1379.github.io">This page's source code on Github</a><br>
-</body>
-</html>  
