--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scaleable=no">
-	<title>Server Helper changelog</title>
+	<title>Jackb</title>
 	<link rel="stylesheet" href="main.style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
