--- a/index.html
+++ b/index.html
@@ -8,3 +8,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+	<h1>Jackb's github website</h1>
+	<p>This isn't a <i>real</i> website... its just a place for me to put a few things I've been working on. You can look at the <a href="server-helper-changelog">Changelog for my Discord bot</a>(which is NOT public please don't ask me for invite links).</p>
+	<p>anyway goodbye</p>
+</body>
+</html>
