--- a/server-helper-changelog/index.html
+++ b/server-helper-changelog/index.html
@@ -14,29 +14,29 @@
 
 	<h2>Server Helper v1.0.1</h2>
 	<p>Added help command</p>
-	<img src="images/img1.png">
+	<img src="https://i.imgur.com/a0GdZlx.png">
 	<p>Added info command</p>
-	<img src="images/img2.png">
+	<img src="https://i.imgur.com/ITfHOif.png">
 
 	<h2>Server Helper v1.0.2</h2>
 	<p>Added memberinfo command</p>
-	<img src="images/img3.png">
+	<img src="https://i.imgur.com/PJnpnYn.png">
 
 	<h2>Server Helper v1.0.3</h2>
 	<p>Added fun commands</p>
-	<img src="images/img4.png">
+	<img src="https://i.imgur.com/HBs1psT.png">
 	<br>
-	<img src="images/img5.png">
+	<img src="https://i.imgur.com/los3OTQ.png">
 	<br>
-	<img src="images/img6.png">
+	<img src="https://i.imgur.com/MNfAkLL.png">
 
 	<h2>Server Helper bot v1.1</h2>
 	<p>Help command has been improved and is now sent as an embed.</p>
-	<img src="images/img7.png">
+	<img src="https://i.imgur.com/ITYNKkB.png">
 	<p>Added credits command</p>
-	<img src="images/img8.png">
+	<img src="https://i.imgur.com/x7rJOK9.png">
 
 	<hr>
-	<center><p>Bot made by Jackb. Thank you to VRicken for helping me test the bot.</p></center>
+	<center><p>(yes I know all the screenshots say VRicken he's just someone who was testing them)</p></center>
 </body>
 </html
