--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 	<link rel="stylesheet" href="main.style.css">
 </head>
 <body>
-	<h1>Jackb's github website</h1>
-	<p>This isn't a <i>real</i> website... its just a place for me to put a few things I've been working on. You can look at the <a href="server-helper-changelog">Changelog for my Discord bot</a>(which is NOT public please don't ask me for invite links).</p>
-	<p>anyway goodbye</p>
+	<h1>Jackb</h1>
+	<p>Hello, welcome to this <s>website</s> github pages site... its not really a website. Its just a place for me to put a few things that I don't know where to put. Honestly switching from paid web hosting to github pages was the best desicion of my life, even though it means no PHP (I never really understood PHP anyway) so yeah here is a list of stuff that I've put on here:</p>
+	<ul>
+		<li><a href="minecraft-links">Minecraft jar links</a> (mainly just for me, its a bit useful but outdated)</li>
+		<li><a href="server-helper">Server Helper</a> (this is my discord bot that I'm working on when I get the chance)</li>
+		<li><a href="https://github.com/Jackb1379">Jackb1379</a> (link to my github account)</li>
+		<li><a href="https://github.com/Jackb1379/Jackb1379.github.io">Github pages repository</a> (source code)</li>
+	</ul>
+	<p>WARNING: read my source code at your own risk: it will probably give any programmer nightmares, not to mention deprecated html elements...</p>
+	<p>Have fun</p>
 </body>
 </html>
