--- a/server-helper/index.html
+++ b/server-helper/index.html
@@ -8,8 +8,22 @@
 </head>
 <body>
 	<h1>Server Helper</h1>
-	<p>This is the page for my Discord bot which is NOT PUBLIC, please do not ask me for invite link!! You can see the <a href="changelog.html">changelog</a> if you really want to. Basically I just needed somewhere to host a few files which my bot could send links to so I just use this.</p>
-  <img src="https://i.imgur.com/8UTwQPd.png" alt="bot" />
+	<p>Server Helper is a helpful bot that has powerful features to help your Discord server be amazing. It has lots of features you can use, your moderators can use, and your server members can use.</p>
+	<h3>Command list</h3>
+	Moderation commands
+	<ul>
+		<li><code>>Help</code></li>
+		<li><code>>Credits</code></li>
+		<li><code>>Memberinfo [@user]</code></li>
+		<li><code>>Ping</code></li>
+	</ul>
+	Fun commands
+	<ul>
+		<li><code>>8ball [question]</code></li>
+		<li><code>>Coin</code></li>
+		<li><code>>Dice</code></li>
+	</ul>
+	<img src="https://i.imgur.com/8UTwQPd.png" alt="bot" />
   <p><a href="https://jackb1379.github.io/">Back to homepage</a>
 </body>
 </html>
