--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<li><a href="https://github.com/Jackb1379">Jackb1379</a> (link to my github account)</li>
 		<li><a href="https://github.com/Jackb1379/Jackb1379.github.io">Github pages repository</a> (source code)</li>
 	</ul>
-	<p>WARNING: read my source code at your own risk: there are lots of deprecated html elements which really shouldn't work anymore but ¯\_(ツ)_/¯</p>
+	<p>WARNING: read my source code at your own risk: there are lots of deprecated html elements which really shouldn't work anymore but do work so ¯\_(ツ)_/¯</p>
 	<p>Have fun</p>
 </body>
 </html>
