--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>there is nothing here</h1>
-  <span>i only use this to host some css files which i use in other projects.</span><br><span>feel free to look at my <a href="https://github.com/Jackb1379">github account</a> or <a href="redirect.html">this list of everything i've made</a>.
+  <span>i only use this to host some css files which i use in other projects.</span>
 </body>
 </html>
