--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello</title>
+	<title>redirecting</title>
+	<meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
 </head>
 <body>
-  <h1>there is nothing here</h1>
-  <span>i only use this to host some css files which i use in other projects.</span>
+	<h1>redirecting</h1>
 </body>
 </html>
